# EEG-egg

./: .gitignore  EXPERIMENT_LOG.md  PROJECT_EXPERIMENT_REPORT_ZH.md  README.md  environment.yml  outputs  pyproject.toml  requirements.lock.txt
configs/: channel_subsets.json
notes/: retrieval_optimization_log_2026-04-22.md
scripts/: blend_image_dirs.py  cache_image_bank.py  cache_teacher_logits.py  diagnose_retrieval_logits.py  eval_retrieval_ensemble.py  eval_retrieval_episode_calibration.py  eval_retrieval_single_model_ceiling.py  export_retrieval_prototypes.py  log_experiment.py  make_subset_manifest.py  match_public_subject.py  predict_reconstruction.py  predict_reconstruction_embed.py  predict_reconstruction_sdxl_img2img.py  predict_retrieval.py  predict_retrieval_dreamsim_online.py  predict_retrieval_reranker.py  run_retrieval_ensemble_from_runs.py  summarize_recon_campaign.py  train_eeg_pretrain.py  train_embedding_adapter.py  train_lowlevel_image_prior.py  train_reconstruction.py  train_reconstruction_embed.py  train_retrieval.py  train_retrieval_dreamsim_online.py  train_retrieval_episode_selector.py  train_retrieval_logit_reranker.py  train_retrieval_meta_selector.py  train_retrieval_reranker.py
scripts/campaigns/: hpc_recon_phase2_lowlevel_ssim_20260427.sbatch  hpc_recon_phase2_refine_fast_20260427.sbatch  run_recon_campaign_20260427.sh
src/project1_eeg/: __init__.py  data.py  evaluation.py  image_banks.py  kandinsky.py  reconstruction.py  reranker.py  retrieval.py  runtime.py  sdxl.py  utils.py
